  * click on block to run
  * arc
  * setxy
  * set heading
  * x, y, heading
  * lots-o-sample projects
  * expanding arithmetic blocks
  * expanding 2-arg blocks
  * implement color model (Munsell)
  * fix Munsell 2.5 tables
  * set background color
  * trash
  * move labels to container
  * fix repeat docking bug
  * fix filler hide bug
  * real block highlighting
  * fix problem with cascading arithmetic operators
  * trigger events on containers, not bitmaps
  * multiple turtles (one for each start block)
  * show text
  * show image
  * different colors for each turtle
  * turtle shell (aka sprites)
  * erase media (remove children)
  * reset turtle skin on clear
  * scale text, images, turtle shell
  * center images on turtle
  * fix turtle layering bug
  * fix action name bug
  * open file from window location
  * major refactoring of code
  * don't accept CR in numeric text area
  * restore from trash
  * add wait block
  * save/restore session
  * stop turtle
  * first pass on a palette strategy
  * save file to turtle.sugarlabs.org (when running from server) w/tch
  * svg output to window
  * added menu to trash for restore and clear all
  * fix block/turtle/canvas layering
  * fix mouse down logic
  * figured out how to do inline svg with easeljs...
    beginning to convert to svg factory methods.
  * use container caching on blocks
  * fixed labels on random block
  * fixed label on less block (use &lt;)
  * fixed infinite loop problem when searching for expandables

TODO:
  * rename action blocks when loading projects
  * fix canvas sizing, resizing
  * seed svg with bg color on load
  * selectable menu of samples
  * send svg thumbnail to server
  * fix menu tearing issues
  * use container caching on palette
  * use snap to pixels
  * copy/paste
  * user defined blocks
  * better compartmentalization of block code (dictionary)
  * more sensors
  * implement if then else, forever, while, until, 'stop action' aka break
  * keyboard short cuts